Bug 263123 - REGRESSION (266070@main): iOS Notes: selection and cursor color is gray in color and not yellow
Summary: REGRESSION (266070@main): iOS Notes: selection and cursor color is gray in co...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-13 09:33 PDT by Wenson Hsieh
Modified: 2023-10-13 12:27 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2023-10-13 09:33:02 PDT
rdar://116748932
Comment 1 Wenson Hsieh 2023-10-13 09:55:34 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19054
Comment 2 EWS 2023-10-13 12:27:19 PDT
Committed 269314@main (33d14a68bc4a): <https://commits.webkit.org/269314@main>

Reviewed commits have been landed. Closing PR #19054 and removing active labels.